Reading mostly works. Still a few kinks to work out.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 tagfs :
 	gcc -g -lsqlite3 -Wall `pkg-config fuse --cflags --libs` tagfs.c tagfs_db.c tagfs_common.c tagfs_debug.c -o tagfs
 run : tagfs
-	./tagfs TagFS
+	./tagfs -f -s TagFS
 clean :
-	fusermount -u TagFS
 	rm tagfs
+	fusermount -u TagFS
