-Ignore core file -Added rules for unmounting and deleting to Makefile -Add command to make to run `ulimit -c unlimited` to allow core files -Removed unnecessary include in tagfs.c -Moved Debug lines after declarations -Added various comments -Switched frees to use free_single_ptr -Rewrote behavior for loading folders so it uses tag IDs now

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 tagfs :
-	gcc -g -lsqlite3 -lglib-2.0 -Wall `pkg-config fuse --cflags --libs` -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ tagfs.c tagfs_db.c tagfs_common.c tagfs_debug.c -o tagfs
+	ulimit -c unlimited; gcc -g -lsqlite3 -lglib-2.0 -Wall `pkg-config fuse --cflags --libs` -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ tagfs.c tagfs_db.c tagfs_common.c tagfs_debug.c -o tagfs
 
 run : tagfs
 	./tagfs -f TagFS
@@ -10,3 +10,9 @@ run-valgrind : tagfs
 clean :
 	rm tagfs
 	fusermount -qu TagFS
+
+unmount :
+	fusermount -qu TagFS
+
+delete :
+	rm tagfs
