Make run in single-thread mode. Doesn't appear to be a significant performance gain and will get around database lock issues.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ tagfs :
 	gcc -g -lsqlite3 -lglib-2.0 -Wall `pkg-config fuse --cflags --libs` -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ tagfs.c tagfs_db.c tagfs_common.c tagfs_debug.c -o tagfs
 
 run : tagfs
-	./tagfs -f TagFS
+	./tagfs -f -s TagFS
 
 run-valgrind : tagfs
 	export G_DEBUG=gc-friendly && export G_SLICE=always-malloc && valgrind --leak-check=full ./tagfs -f TagFS
